--- a/cust/src/main/resources/application.properties
+++ b/cust/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=tenant
-server.port=8009
+spring.application.name=cust
+server.port=8007
 
 logging.level.com.zaxxer.hikari=TRACE
 logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
